# booking-challenge-2021

./: .gitignore  README.md  pyproject.toml
data/: evaluation_demo.ipynb
dockers/: Dockerfile  Dockerfile.cpu
notebooks/: mlp.ipynb  mlp.py  mlp_utils.py  mlpflow.py  preprocess.ipynb  preprocess.py
src/: data.py  gru.py  metrics.py  mlp.py  models.py  preprocess.py  utils.py
src/gru/: data.py  model.py  train.py
src/mlp/: data.py  train.py
