[tool.poetry]
name = "booking-challenge-2021"
version = "0.1.0"
description = ""
authors = ["Huy Dang <quanghuy.dang210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
setuptools = "^68.2.2"
torch = "^2.1.1"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
plotly = "^5.18.0"
torchvision = "^0.16.1"
tensorboard = "^2.15.1"
metaflow = "^2.10.7"
zenml = "^0.47.0"
black = "^23.11.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
