[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Huy Dang <quanghuy.dang210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.2.0"
torchvision = "^0.17.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.3"
polars-lts-cpu = "^0.20.6"
pyarrow = "^15.0.0"


[tool.poetry.group.metaflow.dependencies]
zenml = "^0.55.1"
plotly = "^5.18.0"
metaflow = "^2.11.1"
tqdm = "^4.66.1"
jupyter = "^1.0.0"
black = "^24.1.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
